--- a/interactividad1/index.html
+++ b/interactividad1/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Interactividad</title>
+    <title>Cambios de humor</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
